2010-04-25  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/plotting.sh: Create plotting data for gnuplot.

	* generator/summaryStatsET.sh: Creating statistical information from summary.
	* generator/stats.awk: Likewise.

2010-04-25  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/summaryET.sh: Create file summary for each parameter setting.

	* generator/runScriptET.sh: Run benchmark for a topology.

	* generator/genTopologyCore.sh: Renaming from generator/genExampleCore.sh.

	* generator/genTopology.sh: Renaming from generator/genExample.sh.

	* include/dlvhex/MLPSolver.hpp: Add option --forget (forgetting instantiation)
	* src/dlvhex/dlvhex.cpp: Likewise.
	* src/dlvhex/State.cpp: Likewise.

2010-04-24  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/genExampleCore.sh: Generate 'interesting' examples.

2010-04-23  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/genParameterSetting.sh: Generate a complete benchmark suite for a topology.
	* generator/genExample.sh: Likewise.

	* generator/Module.cpp: Use numModules instead of numDiamond in Diamond topology.

	* include/dlvhex/MLPSolver.hpp: Choose the fastest dataset for A (using vector only).

	* generator/gen.sh: Adding Tree topology.
	* generator/Module.cpp: Likewise.

	* include/dlvhex/MLPSolver.hpp: Adding #callToDLV and #ASFromDLV information.
	* testsuite/TestMLPSolver.cpp: Likewise.

2010-04-22  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/Module.cpp: Introducing at most instead of exactly for parameters + formal input more than one predicate.

	* include/dlvhex/MLPSolver.hpp: Including time information in STATS.

	* include/dlvhex/RuleTable.hpp: To not insert previously existed rule.

2010-04-20  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Put data structure for A in a separate file.
	* include/dlvhex/IDSetContainer.hpp: Likewise.
